--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-712.0KB/s(Youtube:不良林), server: 5.183.176.83, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-624.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-1.37MB/s(Youtube:不良林), server: 5.183.176.92, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.56MB/s(Youtube:不良林), server: 185.172.113.108, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-577.3KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
-  - {name: 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇫🇷 法国-1.61MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-1.31MB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-319.0KB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.83MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
   - {name: 🇫🇷 法国-532.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.86MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.01MB/s(Youtube:不良林), server: 5.183.176.92, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.38MB/s(Youtube:不良林), server: 5.183.176.92, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.74MB/s(Youtube:不良林), server: 5.183.176.92, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.66MB/s(Youtube:不良林), server: 5.183.176.92, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-5.66MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-712.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-577.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-532.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-712.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-577.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-532.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-712.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-577.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-532.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-712.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-577.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-532.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-712.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-577.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-532.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-712.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-577.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-532.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-712.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-624.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-577.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-319.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-532.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
